[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:medio/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
filterwarnings =
    ignore::RuntimeWarning

[metadata]
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
name = pymedio
version = attr: medio.__version__
description = read arbitrary medical images in python
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = medio
license = MIT license
url = https://github.com/jcreinhold/pymedio
project_urls =
	Bug Tracker = https://github.com/jcreinhold/pymedio/issues
	Documentation = https://pymedio.readthedocs.io/
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    numpy>=1.21
    pydicom>=2
setup_requires =
	pytest-runner
test_suite = tests
tests_require =
    pytest>=3

[options.packages.find]
include =
    medio
    medio.*
exclude =
	tests
	docs

[options.package_data]
medio = py.typed

[options.extras_require]
all =
    nibabel>=3
    SimpleITK>=2.1.0
