[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[bumpversion:file:pymedio/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs
per-file-ignores = 
	__init__.py: F401
max-line-length = 88
extend-ignore = E203

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
filterwarnings = 
	ignore::RuntimeWarning

[metadata]
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
name = pymedio
version = attr: pymedio.__version__
description = read arbitrary medical images in python
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = pymedio
license = MIT license
url = https://github.com/jcreinhold/pymedio
project_urls = 
	Bug Tracker = https://github.com/jcreinhold/pymedio/issues
	Documentation = https://pymedio.readthedocs.io/
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires = 
	numpy>=1.21
test_suite = tests

[options.packages.find]
include = 
	pymedio
	pymedio.*
exclude = 
	tests
	docs

[options.package_data]
pymedio = py.typed

[options.extras_require]
cryptography = 
	cryptography>=36.0
dicom = 
	pydicom>=2
all = 
	cryptography>=36.0
	nibabel>=3
	pydicom>=2
	SimpleITK>=2.1.0
