[metadata]
name = pymedio
version = attr: pymedio.__version__
description = read arbitrary medical images in python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jcreinhold/pymedio
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
license = MIT license
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
keywords = pymedio
project_urls =
    Bug Tracker = https://github.com/jcreinhold/pymedio/issues
    Documentation = https://pymedio.readthedocs.io/

[options]
packages = find:
install_requires =
    numpy>=1.21
python_requires = >=3.9, !=3.10.*, !=3.11.*
include_package_data = True
test_suite = tests
zip_safe = False

[options.packages.find]
exclude =
    tests
    docs
include =
    pymedio
    pymedio.*

[options.extras_require]
all =
    SimpleITK>=2.1.0
    cryptography>=36.0
    nibabel>=3
    pydicom>=2
cryptography =
    cryptography>=36.0
dicom =
    pydicom>=2

[options.package_data]
pymedio = py.typed

[bumpversion]
current_version = 0.2.7
commit = True
tag = True

[bumpversion:file:pymedio/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
exclude = docs
per-file-ignores =
    __init__.py: F401
max-line-length = 88
extend-ignore = E203

[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules --ignore=setup.py
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER
filterwarnings =
    ignore::RuntimeWarning
